--- a/ProyectoReact/package.json
+++ b/ProyectoReact/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.7.5",
     "date-fns": "^3.0.6",
     "exceljs": "^4.4.0",
     "html2canvas": "^1.4.1",
